--- a/.github/workflows/pr_build_jdk11.yml
+++ b/.github/workflows/pr_build_jdk11.yml
@@ -1,4 +1,4 @@
-name: Windup PR/Push builder for JDK11
+name: Windup PR/Push builder
 
 on:
   pull_request:
@@ -12,51 +12,103 @@ on:
 
 jobs:
 
-  windup-build-with-unit-tests-1:
+  windup-build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-package: jdk
-        cache: 'maven'
+    - name: Cache local Maven repository
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: maven-windup-build-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+          setup-java-
+    - name: Build on JDK 11
+      run: mvn clean install -DskipTests -B -U
+
+  windup-build-with-unit-tests-1:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [ 11, 17 ]
+    runs-on: ubuntu-latest
+#    needs: [windup-build]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ matrix.java-version }}
+        distribution: 'temurin'
+        java-package: jdk
+    - name: Cache local Maven repository
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: maven-windup-build-${{ github.sha }}
     - name: Set up chromedriver variable
       run: |
         echo "CHROMEWEBDRIVER=${CHROMEWEBDRIVER}" >> "$GITHUB_ENV"
-    - name: Build on JDK 11
-      run: mvn clean install -DskipTests -B -U && mvn -B clean install -pl '!tests,!rules-java/tests,!rules-xml/tests,!config/tests' -Dwebdriver.chrome.driver=${{ env.CHROMEWEBDRIVER }}/chromedriver
+    - name: Test
+      run: mvn -B clean install -pl '!tests,!rules-java/tests,!rules-xml/tests,!config/tests' -Dwebdriver.chrome.driver=${{ env.CHROMEWEBDRIVER }}/chromedriver
 
   windup-build-with-unit-tests-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [ 11, 17 ]
     runs-on: ubuntu-latest
+    needs: [windup-build]
     steps:
-    - uses: actions/checkout@v2.3.4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - uses: actions/checkout@v3
+    - name: Set up JDK
+      uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: ${{ matrix.java-version }}
+        distribution: 'temurin'
         java-package: jdk
-        cache: 'maven'
+    - name: Cache local Maven repository
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: maven-windup-build-${{ github.sha }}
     - name: Set up chromedriver variable
       run: |
         echo "CHROMEWEBDRIVER=${CHROMEWEBDRIVER}" >> "$GITHUB_ENV"
-    - name: Build on JDK 11
-      run: mvn clean install -DskipTests -B -U && mvn -B clean install -pl 'rules-java/tests,rules-xml/tests,config/tests' -Dwebdriver.chrome.driver=${{ env.CHROMEWEBDRIVER }}/chromedriver
+    - name: Test config
+      run: mvn -B clean install -f config
+    - name: Test rules-java
+      run: mvn -B clean install -f rules-java
+    - name: Test rules-xml
+      run: mvn -B clean install -f rules-xml
 
   windup-tests:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [ 11, 17 ]
     runs-on: ubuntu-latest
+    needs: [windup-build]
     steps:
-    - uses: actions/checkout@v2.3.4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - uses: actions/checkout@v3
+    - name: Set up JDK
+      uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: ${{ matrix.java-version }}
+        distribution: 'temurin'
         java-package: jdk
-        cache: 'maven'
+    - name: Cache local Maven repository
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: maven-windup-build-${{ github.sha }}
     - name: Set up chromedriver variable
       run: |
         echo "CHROMEWEBDRIVER=${CHROMEWEBDRIVER}" >> "$GITHUB_ENV"
@@ -64,5 +116,5 @@ jobs:
       uses: stCarolas/setup-maven@v4.5
       with:
         maven-version: 3.8.7
-    - name: Build on JDK 11
-      run: mvn clean install -DskipTests -B -U && mvn -B clean install -Dwebdriver.chrome.driver=${{ env.CHROMEWEBDRIVER }}/chromedriver -f tests
+    - name: Test
+      run: mvn -B test -Dwebdriver.chrome.driver=${{ env.CHROMEWEBDRIVER }}/chromedriver -f tests
